--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: titleFont;
-    src: url('/img/font/riffic/RifficFree-Bold.ttf') format("truetype");
+    src: url('/Mittagstisch/img/font/riffic/RifficFree-Bold.ttf') format("truetype");
 }
 
 
@@ -29,7 +29,7 @@
     height: calc(100vh - var(--nav-height));
     position: absolute;
     top: var(--nav-height);
-    background-image: url('/img/meal-g8bbb35c02_1920.jpg');
+    background-image: url('/Mittagstisch/img/meal-g8bbb35c02_1920.jpg');
     background-size: cover;
     background-position: center;
     filter: brightness(0.5);
@@ -43,7 +43,7 @@
 
 .title-name {
     max-width: var(--text-width);
-    font-family: titleFont;
+    font-family: titleFont, serif;
     font-size: 80px;
     font-weight: 900;
 }
