--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700;900&display=swap');
 
 @font-face {
     font-family: titleFont;
-    src: url('/Mittagstisch/img/font/riffic/RifficFree-Bold.ttf') format("truetype");
+    src: url('/img/font/riffic/RifficFree-Bold.ttf') format("truetype");
 }
-
 
 :root {
     --main-color: #c83c34;
     --nav-height: 110px;
-    --pc-width: 20vw;
+    --pc-width: 10vw;
     --main-bg-color: #272e33;
     --text-width: 40vw;
+    --secondary-color: white;
+    --highlight-color: #ff6f61;
 }
 
-/*---------------------- Main ----------------------------*/
+body {
+    font-family: 'Titillium Web', sans-serif;
+}
 
 .title-page {
     width: 100vw;
@@ -22,6 +26,8 @@
     margin: 0 calc(-1 * var(--pc-width));
     display: flex;
     align-items: center;
+    justify-content: center;
+    background: var(--secondary-color);
 }
 
 .title-img {
@@ -29,9 +35,9 @@
     height: calc(100vh - var(--nav-height));
     position: absolute;
     top: var(--nav-height);
-    background-image: url('/Mittagstisch/img/meal-g8bbb35c02_1920.jpg');
+    background-image: url('/img/Kian Drawing.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: left;
     filter: brightness(0.5);
 }
 
@@ -39,6 +45,7 @@
     margin: 0 var(--pc-width);
     color: rgb(255, 255, 255);
     z-index: 1;
+    text-align: center;
 }
 
 .title-name {
@@ -46,6 +53,8 @@
     font-family: titleFont, serif;
     font-size: 80px;
     font-weight: 900;
+    color: var(--secondary-color);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .title-signin {
@@ -54,9 +63,16 @@
     color: white;
     background-color: var(--main-color);
     padding: 20px;
+    border-radius: 15px;
     border: 5px solid white;
     width: max-content;
     cursor: pointer;
+    transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+.title-signin:hover {
+    transform: scale(1.1);
+    background-color: var(--highlight-color);
 }
 
 .rules {
@@ -65,6 +81,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    gap: 2rem;
+    padding: 2rem;
 }
 
 .rules a {
@@ -75,32 +93,74 @@
     max-width: 60%;
 }
 
-#popup-container {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    max-width: 200px;
-    background-color: var(--main-color);
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px var(--main-bg-color);
-}
-
-#popup-header {
+.img-text-container {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    border-bottom: 1px solid #ccc;
-    margin-bottom: 8px;
+    gap: 2rem;
 }
 
-#popup-close {
-    cursor: pointer;
+.img-text-one, .img-text-two {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    transition: transform 0.3s ease-in-out;
+}
+
+.text h1, .text h2 {
+    font-family: 'Chewy', cursive;
+    color: var(--highlight-color);
+    margin-bottom: 1rem;
+    animation: fadeIn 1s ease-in-out;
+}
+
+.img-text-container-text, .opening-times, main p {
+    line-height: 1.5;
+}
+
+.animated-img, main {
+    animation: fadeIn 1s ease-in-out;
+}
+
+.animated-link {
+    color: var(--highlight-color);
+    text-decoration: none;
+    position: relative;
+    transition: color 0.3s ease-in-out;
+}
+
+.animated-link::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--highlight-color);
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out;
+}
+
+.animated-link:hover {
+    color: var(--main-color);
+}
+
+.animated-link:hover::after {
+    visibility: visible;
+    transform: scaleX(1);
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 @media only screen and (max-width: 1200px) {
-
     :root {
         --pc-width: 5vw;
         --text-width: 90vw;
@@ -108,18 +168,5 @@
 
     .title-name {
         font-size: 50px;
-    }
-
-    .ernahrung {
-        flex-direction: column;
-        gap: 50px;
-    }
-
-    .ernahrung-text {
-        max-width: 99%;
-    }
-
-    .ernahrung-img img {
-        max-width: 90vw;
     }
 }
