--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: titleFont;
-    src: url('img/font/riffic/RifficFree-Bold.ttf') format("truetype");
+    src: url('/Mittagstisch/img/font/riffic/RifficFree-Bold.ttf') format("truetype");
 }
 
 :root {
@@ -100,5 +100,9 @@ body {
 
     .title-name {
         font-size: 50px;
+    }
+
+    .rules-text {
+        width: ;
     }
 }
