--- a/css/style.css
+++ b/css/style.css
@@ -108,5 +108,11 @@ body {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        gap: 0;
+        padding: 0;
+    }
+
+    .title-img {
+        background-position: center;
     }
 }
