--- a/css/all.css
+++ b/css/all.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700;900&display=swap');
 
 :root {
@@ -172,7 +173,7 @@ main {
 }
 
 h1, h2 {
-    font-family: 'Chewy', cursive;
+    font-family: ' ', cursive;
     color: var(--highlight-color);
     margin-bottom: 1rem;
     animation: fadeIn 1s ease-in-out;
