--- a/css/angebot.css
+++ b/css/angebot.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;700;900&display=swap');
+
 :root {
     --main-color: #c83c34;
     --nav-height: 110px;
