--- a/css/all.css
+++ b/css/all.css
@@ -168,7 +168,7 @@ main {
     align-items: center;
     gap: 2rem;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-evenly;
     transition: transform 0.3s ease-in-out;
 }
 
@@ -220,15 +220,6 @@ h1, h2 {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-}
-
-.img-text-one,
-.img-text-two {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
 }
 
 .img-text-container-img,
