--- a/css/all.css
+++ b/css/all.css
@@ -85,7 +85,7 @@ nav {
     justify-content: flex-start;
     position: absolute;
     cursor: pointer;
-    background-image: url("/Mittagstisch/img/logo/logo.png");
+    background-image: url("../img/logo/logo.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -141,7 +141,7 @@ nav ul li a:hover {
 .page-title-img {
     margin: 0 calc(-1 * var(--pc-width));
     height: 20vh;
-    background-image: url("/Mittagstisch/img/hirschthal_bg.jpg");
+    background-image: url("../img/hirschthal_bg.jpg");
     background-size: cover;
     display: flex;
     align-items: center;
@@ -368,7 +368,7 @@ footer a {
 @media only screen and (max-width: 600px) {
 
     .logo {
-        background-image: url("/Mittagstisch/img/logo/logo_notext2.png"); /* Logo without text for smaller screens */
+        background-image: url("../img/logo/logo_notext2.png"); /* Logo without text for smaller screens */
     }
 
     .page-title-img {
